--- a/src/pages/addexp/addexp.css
+++ b/src/pages/addexp/addexp.css
@@ -2,7 +2,7 @@
     /* border: 1px solid red; */
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     padding: 0 2rem;
 }
@@ -135,6 +135,26 @@
     align-items: center;
     background: #dbe1e6;
     box-shadow: 0 0 5px #fff, 5px 5px 10px #a7aaaf, -5px -5px 10px #fff;
+}
+.exp .foot .pages{
+    display: inline-block;
+    margin: 0 5px;
+    width: 23px;
+    cursor: pointer;
+    transition: 0.2s;
+    height: 28px;
+    line-height: 25px;
+    text-align: center;
+    background: white;
+    border: 1px solid grey;
+    color: grey;
+    border-radius: 5px;
+    box-shadow: 3px 3px 8px rgb(0 0 0 / 40%);
+}
+.exp .foot .pages:hover,
+.exp .foot .pages.active{
+    background: grey;
+    color: white;
 }
 .exp .modal{
     position: absolute;
