--- a/src/pages/dataanalysis.css
+++ b/src/pages/dataanalysis.css
@@ -1,6 +1,6 @@
 .datanalysis{
     max-width: 100%;
-    height: 100%;
+    /* height: 100%; */
     /* border: 1px solid red; */
     overflow-x: hidden;
     overflow-y: auto;
@@ -9,7 +9,7 @@
     /* grid-gap: 2rem; */
     display: flex;
     justify-content: flex-start;
-    gap: 50px;
+    gap: 40px;
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 2em;
