--- a/client/src/pages/dataanalysis.css
+++ b/client/src/pages/dataanalysis.css
@@ -47,6 +47,7 @@
 .datanalysis .card .data .day{
     position: relative;
     width: 100%;
+    text-transform: capitalize;
     /* border: 1px solid red; */
     height: 50%;
     padding-left: 10px;
