--- a/client/src/pages/dataanalysis.css
+++ b/client/src/pages/dataanalysis.css
@@ -9,13 +9,14 @@
     /* grid-gap: 2rem; */
     display: flex;
     justify-content: flex-start;
-    gap: 35px;
+    gap: 20px;
     align-items: flex-start;
     flex-wrap: wrap;
-    padding: 2em;
+    padding: 2rem 1rem;
 }
 .datanalysis .card{
-    width: 280px;
+    width: 260px;
+    /* margin: 20px auto; */
     height: 120px;
     /* border: 1px solid red; */
     display: flex;
