--- a/client/src/pages/addexp/addexp.css
+++ b/client/src/pages/addexp/addexp.css
@@ -185,6 +185,28 @@
     background: #f0f0f0;
     /* border: 1px solid red; */
 }
+.exp .modal .ledgeredit{
+    position: absolute;
+    top: 55px;
+    right: 50px;
+    width: 40px;
+    height: 40px;
+}
+.exp .modal .ledgeredit i{
+   display: inline-block;
+   border-radius: 50%;
+   position: relative;
+   width: 40px;
+   text-align: center;
+   line-height: 40px;
+   height: 40px;
+   background: #dbe1e6;
+   box-shadow: 0 0 5px #fff,
+     5px 5px 10px #a7aaaf,
+     -5px -5px 10px #fff;
+     cursor: pointer;
+}
+
 .exp .box h1{
     width: 100%;
     background: skyblue;
@@ -257,3 +279,4 @@
 .exp tr td:nth-child(2){
     text-transform: capitalize;
 }
+
