--- a/client/src/pages/dataanalysis.css
+++ b/client/src/pages/dataanalysis.css
@@ -9,19 +9,19 @@
     /* grid-gap: 2rem; */
     display: flex;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 30px;
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 2rem 1rem;
 }
 .datanalysis .card{
     width: 260px;
-    /* margin: 20px auto; */
     height: 120px;
     /* border: 1px solid red; */
     display: flex;
     color: rgb(75, 67, 67);
     overflow: hidden;
+    margin-top: 30px;
     border-radius: 10px;
     background: #dbe1e6;
     box-shadow: 0 0 5px #fff,
