--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,26 +1,34 @@
 .home{
     max-width: 100%;
-    height: 100%;
-    /* border: 1px solid red; */
-    overflow-x: hidden;
-    overflow-y: auto;
+    /* height: 100%; */
     /* display: grid;
     grid-template-columns: repeat(auto-fill, 312px); */
     /* grid-gap: 2rem; */
     display: flex;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 30px;
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 2em;
+   
 }
 .home .card{
-    width: 280px;
+    width: 260px;
     height: 120px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    margin-top: 30px;
     display: flex;
     overflow: hidden;
     border-radius: 10px;
+    background: #dbe1e6;
+    box-shadow: 0 0 5px #fff,
+      5px 5px 10px #a7aaaf,
+     
+      -5px -5px 10px #fff;
+}
+.home .card:hover{
+    box-shadow: inset 2px 2px 5px #a7aaaf,
+      inset -5px -5px 5px #fff;
 }
 .home .card .data{
     position: relative;
@@ -48,12 +56,13 @@
 .home .card .icon{
 width: 40%;
 height: 100%;
-text-align: center;
-line-height: 110px;
+display: flex;
+justify-content: center;
+align-items: center;
 /* border: 1px solid rgb(12, 61, 238); */
 position: relative;
 }
 .home .card .icon i{
-    font-size: 3em;
+    font-size: 4.2em;
     color: rgb(83, 80, 80);
 }
