--- a/client/src/pages/addexp/modalbox.css
+++ b/client/src/pages/addexp/modalbox.css
@@ -19,6 +19,12 @@
     background: #f0f0f0;
     /* border: 1px solid red; */
 }
+/* .exp .modal .box .leger option{
+   text-transform: capitalize;
+} */
+.caps{
+    text-transform: capitalize;
+}
 .exp .modal .ledgeredit{
     position: absolute;
     top: 55px;
