--- a/server/client/src/pages/dataanalysis.css
+++ b/server/client/src/pages/dataanalysis.css
@@ -7,7 +7,8 @@
 
 .datanalysis .cont {
     position: relative;
-    width: 100%;
+    width: 50%;
+    margin: 0 auto;
     height: 60px;
     border: 2px solid rgb(9, 180, 242);
     border-radius: 10px;
