--- a/client/src/pages/dataanalysis.css
+++ b/client/src/pages/dataanalysis.css
@@ -3,11 +3,12 @@
     height: 100%;
     /* border: 3px solid red; */
     padding: 5px 10px;
+    overflow: auto;
 }
 
 .datanalysis .cont {
     position: relative;
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     height: 60px;
     border: 2px solid rgb(9, 180, 242);
@@ -52,28 +53,34 @@ display: flex;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 1rem;
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; */
+    /* gap: 20px; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2.5rem;
+    grid-gap: 1.5rem;
 }
 
 .datanalysis .card {
     /* border: 1px solid black; */
     height: 120px;
+    /* width: 23%; */
     display: flex;
+    /* margin: 10px auto; */
     justify-content: space-between;
     background: #dbe1e6;
     box-shadow: 0 0 5px #fff,
         5px 5px 10px #a7aaaf,
         -5px -5px 10px #fff;
-    padding: 0.9em 0.5em;
-    border-radius: 5px;
+    padding: 0.5em;
+    border-radius: 10px;
 }
 
 .datanalysis .card .data {
     position: relative;
-    width: 160px;
-    padding: 4px;
+    width: 130px;
+    padding: 2px;
     /* border: 1px solid red; */
     /* height: 100%; */
 }
@@ -82,11 +89,11 @@ display: flex;
     position: relative;
     width: 100%;
     /* border: 1px solid red; */
-    height: 50%;
+    height: 40%;
     font-size: 1.3em;
     font-weight: 700;
     padding-left: 10px;
-    line-height: 60px;
+    line-height: 40px;
 }
 
 .datanalysis .card .data .day {
@@ -94,7 +101,7 @@ display: flex;
     width: 100%;
     text-transform: capitalize;
     /* border: 1px solid red; */
-    height: 50%;
+    height: 60%;
     padding-left: 10px;
 }
 
