--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
+
 .sidebar{
     position: absolute;
     top: 0;
@@ -18,6 +20,7 @@
 .sidebar .link{
     width: 100%;
     height: 100%;
+    margin-top: 10px;
     /* border: 1px solid red; */
 }
 
@@ -42,6 +45,10 @@
     margin-left: 10px;
     border-top-left-radius: 40px;
     border-bottom-left-radius: 40px; 
+}
+.sidebar .link .active .li .name{
+    font-family: 'East Sea Dokdo', cursive;
+    font-size: 1.8em;
 }
 .sidebar .link .active .li::before{
     content: '';
