--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,7 +77,9 @@ code {
   width: 100%;
   height: 100%;
   /* border: 1px solid red; */
-  background: white;
+  background: #f0f0f0;
+  background: rgba(0,0,0,0.6);
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
