--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,9 +77,10 @@ code {
   width: 100%;
   height: 100%;
   /* border: 1px solid red; */
-  background: #f0f0f0;
-  background: rgba(0,0,0,0.6);
-  backdrop-filter: blur(5px);
+  /* background: #f0f0f0; */
+  /* background: rgba(0,0,0,0.6); */
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(10px);
   display: flex;
   justify-content: center;
   align-items: center;
