--- a/client/src/pages/addexp/ledpage.css
+++ b/client/src/pages/addexp/ledpage.css
@@ -4,8 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(0, 0, 0, 0.3);
-    /* border: 1px solid red; */
+    background: rgba(255,255,255,0.1);
     backdrop-filter: blur(5px);
 }
 .exp .ledpage .box{
@@ -17,9 +16,10 @@
     border-radius: 20px;
     transform: translate(-50%,-50%);
     background: #dbe1e6;
-    border: 1px solid red;
+    border: 3px solid rgb(7, 224, 252);
     padding: 1em 2em;
 }
+
 .exp .ledpage .box h2{
     width: 100%;
     text-align: center;
@@ -65,6 +65,7 @@
       5px 5px 10px #a7aaaf,
      
       -5px -5px 10px #fff;
+      border: 2px solid rgb(7, 224, 252);
       padding-left: 30px;
       font-size: 1.2em;
       border-radius: 20px;
