--- a/client/src/pages/report.css
+++ b/client/src/pages/report.css
@@ -58,6 +58,7 @@
 .report .cont>span:nth-child(1) button{
     background: rgb(0, 204, 255);
     color: white;
+    cursor: pointer;
     font-size: 1em;
     padding: 0 5px;
 }
@@ -70,6 +71,7 @@
     width: 30px;
     height: 30px;
     background: rgb(0, 204, 255);
+    cursor: pointer;
     color: white;
     font-size: 1.2em;
     text-align: center;
@@ -82,6 +84,7 @@
     outline: none;
     background: rgb(0, 204, 255);
     color: white;
+    cursor: pointer;
     box-shadow: 0 0 5px #fff,
         5px 5px 10px #a7aaaf,
         -5px -5px 10px #fff;
